# MovieMind-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml
app/: main.py
app/api/: auth.py  deps.py  health.py  movies.py
app/core/: config.py  security.py
app/crud/: auth_sessions.py  favorites.py  genres.py  health.py  movies.py  users.py
app/db/: session.py
app/models/: __init__.py  movie.py  user.py
app/schemas/: favorites.py  movies.py  users.py
app/services/: auth.py  favorites.py  health.py  login.py  movies.py  register.py  tmdb.py
migrations/: env.py
migrations/versions/: 1d7d603dc54e_change_movie_created_at_to_timestamp.py  26f7d55d3650_rename_favorites_movies_favorite_movies.py  3085586f3357_add_users_and_favorites.py  58a1759ff9b5_add_timezona_to_revoked_at.py  76d1485c8b69_add_refresh_token_class.py  94404d887623_create_movie_and_genre_tables.py  9da2e28ec5d8_set_movie_created_at_default.py  b5e81e79157c_add_auth_sessions.py
tests/: conftest.py  constants.py  test_auth_api.py  test_auth_service.py  test_favorites_api.py  test_security.py
