[project]
name = "moviemind-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
