[project]
name = "moviemind-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
    "pytest-env>=1.6.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.pytest_env]
APP_ENV = "test"
DATABASE_URL = "sqlite://"
TMDB_API_KEY = "test-api-key"
TMDB_IMAGE_URL = "https://image.tmdb.org/t/p"
SECRET_KEY = "test-secret-key-that-is-at-least-32-bytes"
